<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taras.homeworklesson8.CreatePersonActivity">

    <EditText
        android:id="@+id/et_first_name"
        android:lines="1"
        android:maxLength="20"
        style="@style/ACP_fieldStyle"
        android:hint="@string/first_name"
        android:padding="@dimen/et_padding_ACP"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_last_name"
        android:lines="1"
        android:maxLength="20"
        style="@style/ACP_fieldStyle"
        android:hint="@string/last_name"
        android:padding="@dimen/et_padding_ACP"
        android:layout_below="@id/et_first_name"
        android:layout_marginTop="@dimen/et_margin_top_ACP"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_gender"
        android:lines="1"
        android:maxLength="6"
        style="@style/ACP_fieldStyle"
        android:hint="@string/gender"
        android:padding="@dimen/et_padding_ACP"
        android:layout_below="@id/et_last_name"
        android:layout_marginTop="@dimen/et_margin_top_ACP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_age"
        android:lines="1"
        android:maxLength="2"
        style="@style/ACP_fieldStyle"
        android:hint="@string/age"
        android:padding="@dimen/et_padding_ACP"
        android:layout_below="@id/et_gender"
        android:layout_marginTop="@dimen/et_margin_top_ACP"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_phone_number"
        android:lines="1"
        android:maxLength="15"
        style="@style/ACP_fieldStyle"
        android:hint="@string/phone_number"
        android:padding="@dimen/et_padding_ACP"
        android:layout_below="@id/et_age"
        android:layout_marginTop="@dimen/et_margin_top_ACP"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_create"
        android:text="Create"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
