<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_guide"
        android:layout_marginTop="@dimen/tv_invisible_margin_top"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_exp_first_name_ASP"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_guide"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_exp_last_name_ASP"
        android:layout_marginTop="5dp"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/last_name"
        android:layout_below="@id/tv_exp_first_name_ASP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_guide"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_exp_gender_ASP"
        android:layout_marginTop="5dp"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/gender"
        android:layout_below="@id/tv_exp_last_name_ASP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_guide"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_exp_age_ASP"
        android:layout_marginTop="5dp"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/age"
        android:layout_below="@id/tv_exp_gender_ASP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_guide"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_exp_phone_number_ASP"
        android:layout_marginTop="5dp"
        android:padding="@dimen/tv_padding_ASP"
        android:textSize="22sp"
        android:text="@string/phone_number"
        android:layout_below="@id/tv_exp_age_ASP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_first_name_ASP"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/cv_corner_radius_ASP"
        card_view:cardElevation="@dimen/cv_elevation_ASP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_exp_first_name_ASP"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tv_exp_first_name_ASP"
        android:layout_toEndOf="@+id/tv_exp_first_name_ASP">

        <TextView
            android:id="@+id/tv_first_name_ASP"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="@dimen/tv_padding_ASP"
            android:text="First name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="2dp"
        android:id="@+id/cv_last_name_ASP"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/cv_corner_radius_ASP"
        card_view:cardElevation="@dimen/cv_elevation_ASP"
        android:layout_alignBottom="@id/tv_exp_last_name_ASP"
        android:layout_alignLeft="@id/cv_first_name_ASP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_last_name_ASP"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="@dimen/tv_padding_ASP"
            android:text="Last name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="2dp"
        android:id="@+id/cv_gender_ASP"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/cv_corner_radius_ASP"
        card_view:cardElevation="@dimen/cv_elevation_ASP"
        android:layout_alignBottom="@id/tv_exp_gender_ASP"
        android:layout_alignLeft="@id/cv_first_name_ASP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_gender_ASP"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="@dimen/tv_padding_ASP"
            android:text="Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="2dp"
        android:id="@+id/cv_age_ASP"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/cv_corner_radius_ASP"
        card_view:cardElevation="@dimen/cv_elevation_ASP"
        android:layout_alignBottom="@id/tv_exp_age_ASP"
        android:layout_alignLeft="@id/cv_first_name_ASP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_age_ASP"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="@dimen/tv_padding_ASP"
            android:text="Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="2dp"
        android:id="@+id/cv_phone_number_ASP"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="@dimen/cv_corner_radius_ASP"
        card_view:cardElevation="@dimen/cv_elevation_ASP"
        android:layout_alignBottom="@id/tv_exp_phone_number_ASP"
        android:layout_alignLeft="@id/cv_first_name_ASP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_phone_number_ASP"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="@dimen/tv_padding_ASP"
            android:text="Phone number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

</RelativeLayout>